--- a/templates/base.html
+++ b/templates/base.html
@@ -5,30 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ShoesShop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="site-css.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav">
         <div class="container">
             <ul class="nav navbar-nav flex-fill">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">ShopShoes</a>
+                    <a class="nav-link" href="/">ShopShoes</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav flex-fill justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="#">Air</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Jordan</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Dunk</a></li>
+                <li class="nav-item"><a class="nav-link" href="/air">Air</a></li>
+                <li class="nav-item"><a class="nav-link" href="/jordan">Jordan</a></li>
+                <li class="nav-item"><a class="nav-link" href="/dunk">Dunk</a></li>
             </ul>
             <ul class="nav navbar-nav flex-fill justify-content-end">
                 <li class="nav-item">
-                    <button class="btn btn-sm btn-outline-secondary" type="button">Login</button>
+                    {% if current_user.is_authenticated %}
+                        <a class="btn btn-sm btn-outline-secondary" type="button" href="/logout">Logout</a>
+                    {% else %}
+                        <a class="btn btn-sm btn-outline-secondary" type="button" href="/login">Login</a>
+                        <a class="btn btn-sm btn-outline-secondary" type="button" href="/register">Register</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
     </nav>
 
     <main>
+        {% block content %}
+        {% endblock %}
     </main>
 
     <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
