--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,17 @@
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light main-nav">
         <div class="container">
-            <ul class="nav navbar-nav flex-fill">
+            <ul class="nav navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">ShopShoes</a>
+                    <a class="nav-link logo" href="/">ShopShoes</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav flex-fill justify-content-center">
+            <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="/air">Air</a></li>
                 <li class="nav-item"><a class="nav-link" href="/jordan">Jordan</a></li>
                 <li class="nav-item"><a class="nav-link" href="/dunk">Dunk</a></li>
             </ul>
-            <ul class="nav navbar-nav flex-fill justify-content-end">
+            <ul class="nav navbar-nav">
                 <li class="nav-item">
                     {% if current_user.is_authenticated %}
                         <a class="btn btn-sm btn-outline-secondary" type="button" href="/logout">Logout</a>
