--- a/templates/shoes_list.html
+++ b/templates/shoes_list.html
@@ -5,10 +5,10 @@
   <div class="row gx-5">
     {% for shoe in shoes_data %}
     <div class="col">
-      <a href=""><img class="title-image" src='{{ url_for("static", filename="img/" + shoe.name + "/title.jpg") }}'></a>
-      <p class="title-text">{{ shoe.name }}</p>
-      <p class="category-text">{{ shoe.category }}</p>
-      <p class="price-text">${{ shoe.price }}</p>
+      <a href=""><img class="title-image" src='{{ url_for("static", filename="img/" + shoe["name"] + "/title.jpg") }}'></a>
+      <p class="title-text">{{ shoe["name"] }}</p>
+      <p class="category-text">{{ shoe["category"] }}</p>
+      <p class="price-text">${{ shoe["price"] }}</p>
     </div>
     {% endfor %}
   </div>
