Added preview shoe

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,3 +20,11 @@ main {
     font-size: 30px;
     font-weight: bold;
 }
+
+.preview-image {
+    width: 100%;
+}
+
+.col {
+    text-align: left;
+}
