--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link logo" href="/">ShopShoes</a>
+                    <a class="nav-link logo" href="/">Shoestore</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav">
@@ -24,9 +24,10 @@
                 <li class="nav-item">
                     {% if current_user.is_authenticated %}
                         <a class="btn btn-sm btn-outline-secondary" type="button" href="/logout">Logout</a>
+                        <a class="btn btn-sm btn-outline-secondary" type="button" style="margin-right: 50px" href="/add_shoe">Add shoe</a>
                     {% else %}
                         <a class="btn btn-sm btn-outline-secondary" type="button" href="/login">Login</a>
-                        <a class="btn btn-sm btn-outline-secondary" type="button" href="/register">Register</a>
+                        <a class="btn btn-sm btn-outline-secondary" type="button" style="margin-right: 55px" href="/register">Register</a>
                     {% endif %}
                 </li>
             </ul>
@@ -40,7 +41,7 @@
 
     <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
         <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-            <h1>ShopShoes</h1>
+            <h1>Shoestore</h1>
             <p>Made by DEVOURING<br>
                 for Yandex Lyceum
             </p>
