--- a/templates/shoe.html
+++ b/templates/shoe.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Add shoe</h1>
-  <form action="" method="post" enctype="multipart/form-data">
+  <form action="" method="post" enctype="multipart/form-data" class="add-shoe-form">
+    <h1>Add shoe</h1>
     {{ form.hidden_tag() }}
     <p>
       {{ form.images.label }}<br>
