--- a/templates/shoe_preview.html
+++ b/templates/shoe_preview.html
@@ -10,7 +10,7 @@
       <h1>{{ shoe["name"] }}</h1>
       <p>{{ shoe["category"] }}</p>
       <p>{{ shoe["price"] }}</p>
-      <p>The Nike {{ shoe["name"] }} lets a new wave of<br>
+      <p>The {{ shoe["name"] }} lets a new wave of<br>
       comfort and style take hold with a design that<br>
       celebrates the rebellious underground rave scene.<br>
       This iteration takes that inspiration even further with<br>
