--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/air">Air</a></li>
-                <li class="nav-item"><a class="nav-link" href="/jordan">Jordan</a></li>
-                <li class="nav-item"><a class="nav-link" href="/dunk">Dunk</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Air</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Jordan</a></li>
+                <li class="nav-item"><a class="nav-link" href="/">Dunk</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
