--- a/templates/shoe_preview.html
+++ b/templates/shoe_preview.html
@@ -18,7 +18,7 @@
       lighting often found on a dance floor to make you<br>
       and your moves shine. Slip them on and let the<br>
       dance party begin.</p>
-
+      <p>Phone number: {{ shoe["user_phone"] }}</p>
     </div>
   </div>
 </div>
